Wed Dec 19 14:46:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_cegcc.GNU:
        * include/makeinclude/platform_g++_common.GNU:
        * include/makeinclude/platform_rtems.x_g++.GNU:
        * include/makeinclude/platform_vxworks6.2.GNU:
        * include/makeinclude/platform_vxworks6.3.GNU:
          Install tao_idl3_to_idl2 and tao_idl3_to_xmi into ACE_ROOT/bin
          to handle cross compilation in a flat layout more easily, this
          way we can use the same approach as tao_idl does

Mon Dec 17 20:53:22 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * ace/Message_Queue_Vx.inl:

          Updated for VxWorks 6.9 32-bit kernel mode.

Mon Dec 17 18:26:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Acceptor.cpp:
          Fixed warning

Mon Dec 17 13:40:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * ace/SOCK_Dgram.cpp: ACE_SOCK_Dgram::make_multicast_ifaddr ()
          Uncovered due to TAO UIPMC option -ORBListenOnAll 1 being
          enabled. The SOCK_Dgram_Mcast.cpp ACE_SOCK_Dgram_Mcast::subscribe_ifs()
          call iterates through the list of IP addresses for all interfaces
          NOT the list of Interface Names. This works only for windows and newer
          linuxes (where they are automatically converted into interface names).
          Older linuxes do not and expect the actual interface names (eg. "Eth0")
          to be given. This fix allows both forms to be given on older linuxes as well.
          (Test TAO/orbscvc/tests/Miop/McastHello updated to enable -ORBListenOnAll 1.)

Mon Dec 17 09:59:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
        * ace/OS_NS_sys_shm.cpp:
        * ace/OS_NS_sys_socket.cpp:
        * ace/OS_NS_sys_stat.cpp:
        * ace/OS_NS_sys_uio.cpp:
          Zapped empty lines

Mon Dec 17 09:31:49 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Acceptor.cpp: